tests/ui/proc-macro/amputate-span.stderr
error[E0433]: failed to resolve: use of undeclared type `Command`
  --> $DIR/amputate-span.rs:49:5
   |
LL |     Command::new("git");
   |     ^^^^^^^ use of undeclared type `Command`
   |
help: consider importing this struct
   |
LL + use std::process::Command;
   |

error[E0433]: failed to resolve: use of undeclared type `Command`
  --> $DIR/amputate-span.rs:63:9
   |
LL |         Command::new("git");
   |         ^^^^^^^ use of undeclared type `Command`
   |
help: consider importing this struct
   |
LL +     use std::process::Command;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
